--- a/Rreth_nesh.html
+++ b/Rreth_nesh.html
@@ -21,6 +21,10 @@
 			opacity: 0.7;
 			padding: 55px;
 		}
+		.img {
+				text-align: center;
+				opacity: none;
+			}
 	</style>
 </head>
 <body>
@@ -37,7 +41,9 @@ It is a restaurant run by a family of 5 who are dedicated to gastronomy. It is a
 At first glance, there is a pleasant environment on a veranda and an interior environment full of light and liveliness, as the space allows the privacy of customers to be in peace and autonomous feeling. But also this restaurant offers ample space for family or friendly events. <br>
 Everything depends on the demand of customers, this family is honored to keep customers satisfied. In a variety of food, with different European characteristics is distinguished a combination of meat, vegetables and special features of different drinks. The customers in this bar are diverse as well as the menu itself. Albanians are distinguished, but also foreigners.<br>
 You are welcome in our restaurant.</p>
-</font>
+</font><h2 align="center"> Our Team</h2></div>
+<div class="img">
+<img src="staff.jpg" alt="Our Team" height="500" > 
 </div>
 
 
